Thu Jul 15 17:53:47 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Service_Gestalt.cpp:
        * THANKS:
        
          Restore pre-gestalt behavior of returning -1 if svc.conf does
          not exist and an ACE_Service_Config::open() is expecting to use
          the default file.

          Thanks to Daynesh Mangal (daynesh@gmail.com) for reporting the
          errant behavior.
        
Thu Jul 15 12:53:53 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
        * etc/ace_inet.doxygen:
        * etc/ace_man.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
          Generate deprecated/todo pages

Thu Jul 15 12:35:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * ace/SSL/SSL_SOCK_Stream.h:
        * ace/SSL/SSL_SOCK_Stream.inl:
          Added two method overloads available in ACE_SOCK_Stream but
          missing from ACE_SSL_SOCK_Stream.

Thu Jul 15 09:49:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-doxygen.h:
          Added ACE_HAS_POSITION_INDEPENDENT_POINTERS

Thu Jul 15 09:29:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_doxygen.pl:
        * etc/ace_inet.doxygen:
        * html/index.html:
          Added ACE INet library

Thu Jul 15 09:11:51 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/config-macosx-snowleopard.h:
        * include/makeinclude/platform_clang_common.GNU:
        * include/makeinclude/platform_macosx_common.GNU:

          Preliminary support for clang compiler.

Tue Jul 13 14:39:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated

Tue Jul 13 14:33:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Cached_Connect_Strategy_T.h:
        * ace/Capabilities.h:
          Doxygen fixes

Tue Jul 13 14:20:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
